# synoema

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Modelfile  NOTICE  PATENTS  README.md  SECURITY.md  TRADEMARK.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: grammar-e2e.yml  release.yml
benchmarks/: package.json
benchmarks/runner/: Cargo.toml
benchmarks/runner/src/: main.rs  report.rs  telemetry.rs
benchmarks/scripts/: llm_generate.py  size_analysis.py  size_benchmark.py  token_count.py
benchmarks/tasks/binary_search/: binary_search.cpp  binary_search.hs  binary_search.js  binary_search.py  binary_search.sno  binary_search.ts  prompt.txt
benchmarks/tasks/bst_insert/: bst_insert.hs  bst_insert.py  bst_insert.sno  prompt.txt
benchmarks/tasks/collatz/: collatz.cpp  collatz.hs  collatz.js  collatz.py  collatz.sno  collatz.ts  prompt.txt
benchmarks/tasks/compose_chain/: compose_chain.hs  compose_chain.py  compose_chain.sno  expected_output.txt  prompt.txt
benchmarks/tasks/csv_parse/: csv_parse.hs  csv_parse.py  csv_parse.sno  expected_output.txt  prompt.txt
benchmarks/tasks/either_validate/: either_validate.hs  either_validate.py  either_validate.sno  expected_output.txt  prompt.txt
benchmarks/tasks/error_handling/: error_handling.cpp  error_handling.hs  error_handling.js  error_handling.py  error_handling.sno  error_handling.ts  expected_output.txt  prompt.txt
benchmarks/tasks/factorial/: factorial.cpp  (+6 more)
context/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  PHASES.md  PROJECT_STATE.md  RULES.md
docs/: IP_STRATEGY.md  LANGUAGE.md  LICENSE  benchmarks.md  constrained-decoding-e2e.md  install.md  mcp.md  stress-server.md  testing.md  versioning.md
docs/articles/: 01_en_token_cost.md  01_ru_token_cost.md  02_en_bpe_anatomy.md  02_ru_bpe_anatomy.md  03_en_constrained_decoding.md  03_ru_constrained_decoding.md  04_en_compilation.md  04_ru_compilation.md  05_en_hindley_milner.md  05_ru_hindley_milner.md  06_en_launch.md  06_ru_launch.md  07_en_future.md  07_ru_future.md  08_en_token_benchmark.md  09_en_runtime_benchmark.md  10_en_llm_generation.md  11_en_cost_calculator.md  12_en_hardware_acceleration.md  13_en_speculative_constrained.md  14_en_doc_as_code.md  15_en_small_model_proof.md  series_plan.md
docs/llm/: error-feedback.md  haskell.md  python.md  stdlib.md  synoema-compact.md  synoema.md
docs/prompts/: bench-viz-task.md
docs/research/: scientific_foundations.md
docs/specs/: compiler_roadmap.md  language_reference.md
docs/user/: README.md
examples/: LICENSE
lang/: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  stress_server.py  stress_tests.html
lang/benchmarks/performance/: results.md
lang/benchmarks/token-count/: benchmark.py  benchmark_results.json
lang/crates/synoema-codegen/: Cargo.toml  LICENSE
lang/crates/synoema-codegen/src/: compiler.rs  lib.rs  runtime.rs
lang/crates/synoema-codegen/tests/: stress.rs
lang/crates/synoema-core/: Cargo.toml
lang/crates/synoema-core/src/: core_ir.rs  desugar.rs  lib.rs  optimize.rs  tests.rs
lang/crates/synoema-diagnostic/: Cargo.toml
lang/crates/synoema-diagnostic/src/: lib.rs
lang/crates/synoema-eval/: Cargo.toml
lang/crates/synoema-eval/src/: env.rs  eval.rs  lib.rs  tests.rs  value.rs
lang/crates/synoema-eval/tests/: stress.rs
lang/crates/synoema-lexer/: Cargo.toml
lang/crates/synoema-lexer/src/: layout.rs  lib.rs  scanner.rs  tests.rs  token.rs
lang/crates/synoema-lexer/tests/: lexer_tests.rs  stress.rs
lang/crates/synoema-parser/: Cargo.toml
lang/crates/synoema-parser/src/: ast.rs  derive.rs  error.rs  imports.rs  lib.rs  parser.rs  tests.rs
lang/crates/synoema-repl/: Cargo.toml
lang/crates/synoema-repl/src/: fmt.rs  lib.rs  main.rs
lang/crates/synoema-types/: Cargo.toml
lang/crates/synoema-types/src/: error.rs  infer.rs  lib.rs  modules.rs  tests.rs  types.rs  unify.rs
lang/crates/synoema-types/tests/: stress.rs
lang/examples/: ackermann.sno  cache.sno  cli_tool.sno  collatz.sno  config.sno  derive.sno  error_handling.sno  euler1.sno  factorial.sno  file_stream.sno  fizzbuzz.sno  gcd.sno  geometry.sno  graph.sno  higher_order.sno  json.sno  json_transform.sno  list_toolkit.sno  map.sno  math_toolkit.sno  modules.sno  parser.sno  pipeline.sno  pow.sno  queue.sno  quicksort.sno  quicksort.sno.bc  records.sno  searching.sno  serializer.sno  sorting.sno  stack.sno  state_machine.sno  stress_server.sno  string_utils.sno  testing.sno  tree.sno  tuple_ops.sno  validator.sno
lang/examples/imports/: diamond.sno  diamond_a.sno  diamond_b.sno  diamond_base.sno  main.sno  math.sno
lang/prelude/: prelude.sno
lang/templates/: AGENTS.md.tmpl  CLAUDE.md.tmpl  clinerules.tmpl  copilot-instructions.md.tmpl  cursorrules.tmpl  gitignore.tmpl  main.sno.tmpl  mcp-claude.json.tmpl  mcp-copilot.json.tmpl  project.sno.tmpl  test.sno.tmpl  windsurfrules.tmpl
lang/tools/bpe-verify/: verify_bpe.py
lang/tools/constrained/: Dockerfile.validator  benchmark.py  docker-compose.yml  generate_llama.sh  generate_sglang.py  integration.py  sglang_config.json  synoema.gbnf  validate_e2e.py
lang/tools/constrained/prompts/: prompts.json
lang/tools/llm/: feedback_loop.py
mcp/: Cargo.toml  LICENSE
mcp/prompts/: codegen.md
mcp/synoema-mcp/: Cargo.toml
mcp/synoema-mcp/src/: dev_tools.rs  index.rs  main.rs  prompts.rs  protocol.rs  recipes.rs  resources.rs  state.rs  tools.rs
npm/synoema-mcp/: package.json
plans/: DEFECT_CORRECTION_PLAN.md
releases/: README.md
releases/v0.1.0-alpha.1/: README.md
scripts/: add_headers.sh  npm-bump-version.sh
spec/: LICENSE
tools/: LICENSE
tools/llm-proxy/: synoema_agent.py
tools/vscode-extension/: language-configuration.json  package.json
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  README.md  install.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: config.ts  extension.ts  output.ts
(+442 files in other folders)
