[package]
name = "synoema-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
synoema-lexer = { path = "../synoema-lexer", version = "0.1.0-alpha.2" }
synoema-parser = { path = "../synoema-parser", version = "0.1.0-alpha.2" }
synoema-core = { path = "../synoema-core", version = "0.1.0-alpha.2" }
synoema-types = { path = "../synoema-types", version = "0.1.0-alpha.2" }
synoema-diagnostic = { path = "../synoema-diagnostic", version = "0.1.0-alpha.2" }
cranelift-codegen = "0.104"
cranelift-frontend = "0.104"
cranelift-module = "0.104"
cranelift-object = "0.104"
cranelift-jit = "0.104"
cranelift-native = "0.104"
target-lexicon = "0.12"

[dev-dependencies]
pretty_assertions = "1"
